# Enclavamiento

./: .gitignore  CMakeLists.txt  README.md  bloqueo.cpp  bloqueo.h  cv.cpp  cv.h  dependencia.cpp  dependencia.h  enums.cpp  enums.h  items.cpp  items.h  lado.h  log.cpp  log.h  main.cpp  mando.h  mqtt.cpp  mqtt.h  pn_enclavado.cpp  pn_enclavado.h  remota.cpp  remota.h  ruta.cpp  ruta.h  serialization.cpp  serialization_remota.cpp  signal.cpp  signal.h  topology.cpp  topology.h
campo/: EnclavamientoCampo.h  PN.h
doc/: architecture.md  mandos.md  mqtt_protocol.md
gestor_conexion/: CMakeLists.txt  gestor_conexion.cpp
include/: enclavamiento.h  enums.h  estado_aguja.h  estado_bloqueo.h  estado_cv.h  estado_mando.h  estado_rbc.h  estado_remota.h  estado_ruta.h  estado_seccion.h  estado_señal.h  id_elemento.h  json.h  lado.h  parametros.h
src/: CMakeLists.txt  aguja.cpp  aguja.h  bloqueo.cpp  bloqueo.h  cv.cpp  cv.h  dependencia.cpp  dependencia.h  deslizamiento.cpp  deslizamiento.h  frontera.h  items.cpp  items.h  log.cpp  log.h  mqtt.cpp  mqtt.h  pn_enclavado.cpp  pn_enclavado.h  remota.cpp  remota.h  ruta.cpp  ruta.h  serialization.cpp  serialization_rbc.cpp  serialization_remota.cpp  signal.cpp  signal.h  time.h  topology.cpp  topology.h
src/campo/: Aguja.h  CuentaEjes.h  EnclavamientoCampo.h  Mando.h  PN.h  Semaforica.h  Signal.h  library.properties  mqtt.h
